--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </section>
     </div>
 
-    <div class="caja">
+    <div id="educacion" class="caja">
       <header>
         <h2>Educación</h2>
       </header>
@@ -59,11 +59,11 @@
           <img src="img/espol.jpg" alt="espol" />
           <h4 class="institucion">ESPOL</h4>
           <p class="anio">2012 - ?</p>
-          <p>Fundamentos de Programación - Programación básica en C
-          <br/ >Programación Orientada a Objetos - Programación en Java
-          <br/ >Estructura de Datos - Manejo de arreglos, listas, colas, pilas
-          <br/ >Fundamentos de Robótica - Control básico de un robot EV3
-          <br/ >Sistemas de Bases de Datos - Administración de Bases de Datos</p>
+          <p><b id="materia">Fundamentos de Programación - </b>Programación básica en C</p>
+          <p><b id="materia">Programación Orientada a Objetos - </b>Programación en Java</p>
+          <p><b id="materia">Estructura de Datos - </b>Manejo de arreglos, listas, colas, pilas</p>
+          <p><b id="materia">Fundamentos de Robótica - </b>Control básico de un robot EV3</p>
+          <p><b id="materia">Sistemas de Bases de Datos - </b>Administración de Bases de Datos</p>
         </section>
       </div>
       
