Hoja de vida RWD

--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
   
   <section>
     <div id="perfil" class="caja">
+      <h2>Elizabeth Meybol Sánchez Villamar</h2>
       <header>
-        <h2>Elizabeth Meybol Sánchez Villamar</h2>
-      </header>
-
-      <div id="iperfil">
         <img src="img/profile.jpg" alt="perfil" />
-        <p>Ingeniería en Computación
-        <br/ >ESPOL
-        <br/ >Guayaquil - Ecuador
-        <br/ >EC090701</p>
+      </header>
+      
+      <div id="iperfil">
+        <p class="u">Ingeniería en Computación</p>
+        <p class="u">ESPOL</p>
+        <p>Guayaquil - Ecuador</p>
+        <p>EC090701</p>
       </div>
     </div>
 
@@ -88,12 +88,12 @@
         <h2>Habilidades Técnicas</h2>
       </header>
 
-      <div>
+      <div id="h">
         <ul>
-          <li><b>9</b>HTML5</li>
-          <li><b>5</b>CSS3</li>
-          <li><b>8</b>C</li>
-          <li><b>5</b>JAVA</li>
+          <li class="h1"><b>9</b>HTML5</li>
+          <li class="h1"><b>5</b>CSS3</li>
+          <li class="h2"><b>8</b>C</li>
+          <li class="h2"><b>5</b>JAVA</li>
         </ul>
       </div>
     </div>
