--- a/films.html
+++ b/films.html
@@ -18,7 +18,7 @@
   </header>
   
   <section>
-    <div class="film">
+    <div id="p1" class="film">
       <header>
         <h2>Plan de Vuelo</h2>
       </header>
@@ -36,14 +36,14 @@
           <li famoso="secundario">Sean Bean</li>
         </ul>
 
-        <b>Sinopsis</b>
+        <b class="sinopsis">Sinopsis</b>
         <p class="sinopsis">Kyle Pratt es una americana que, tras perder a su marido, decide regresar a casa con su hija de seis años. Pero, cuando la niña desaparece misteriosamente durante el vuelo, nadie de la tripulación o del pasaje recuerda haberla visto a bordo. A 12.000 metros de altura, Kyle se enfrentará a la peor pesadilla de su vida: su hija Julia ha desaparecido sin dejar rastro en medio de un vuelo Berlín-Nueva York. Kyle, que todavía no se ha recuperado de la inesperada muerte de su marido, intentará por todos los medios demostrar su cordura a la incrédula tripulación y a los pasajeros, pero también deberá afrontar la posibilidad de haber perdido la razón. A pesar de que tanto Rich, el capitán, como Gene Carson, el policía oficial abordo, querrían creer a la afligida viuda, todo parece indicar que su hija nunca subió al avión. Desesperadamente sola, Kyle sólo podrá contar con sus convicciones para resolver este misterio.</p>
       </div>
     </div>
 
-    <hr>
+    <hr id="p1">
 
-    <div class="film">
+    <div id="p2" class="film">
       <header>
         <h2>Sentido y Sensibilidad</h2>
       </header>
@@ -61,14 +61,14 @@
           <li famoso="secundario">Alan Rickman</li>
         </ul>
 
-        <b>Sinopsis</b>
-        <p class="sinopsis">Tras la muerte de Henry Dashwood, su viuda y las tres hijas del matrimonio, Elinor, Marianne y Margaret, deben abandonar la casa familiar, que es heredada por el único hijo varón de Henry, John, fruto de un enlace anterior. Las cuatro mujeres se ven obligadas a sobrevivir con un austera renta de 500 libras anuales y a mudarse a una pequeña casa de campo que les presta un familiar, el primo de la viuda, sir John Middleton. John Dashwood y su codiciosa mujer, Fanny, se instalan en la mansión. La nueva dueña de la casa invita a su hermano, Edward Ferrars, a pasar un tiempo junto a ellos. Fanny observa con preocupación la incipiente amistad que surge entre Edward y Elinor, por lo que intenta evitar a toda costa que la relación vaya a más. En la casa de los Middleton, Marianne conoce al Coronel Brandon, que se siente atraído por la joven de inmediato.</p>
+        <b class="sinopsis">Sinopsis</b>
+        <p class="sinopsis" class="sp">Tras la muerte de Henry Dashwood, su viuda y las tres hijas del matrimonio, Elinor, Marianne y Margaret, deben abandonar la casa familiar, que es heredada por el único hijo varón de Henry, John, fruto de un enlace anterior. Las cuatro mujeres se ven obligadas a sobrevivir con un austera renta de 500 libras anuales y a mudarse a una pequeña casa de campo que les presta un familiar, el primo de la viuda, sir John Middleton. John Dashwood y su codiciosa mujer, Fanny, se instalan en la mansión. La nueva dueña de la casa invita a su hermano, Edward Ferrars, a pasar un tiempo junto a ellos. Fanny observa con preocupación la incipiente amistad que surge entre Edward y Elinor, por lo que intenta evitar a toda costa que la relación vaya a más. En la casa de los Middleton, Marianne conoce al Coronel Brandon, que se siente atraído por la joven de inmediato.</p>
       </div>
     </div>
 
-    <hr>
+    <hr id="p2">
 
-    <div class="film">
+    <div id="p3" class="film">
       <header>
         <h2>La Propuesta</h2>
       </header>
@@ -86,14 +86,14 @@
           <li famoso="secundario">Craig T. Nelson</li>
         </ul>
 
-        <b>Sinopsis</b>
-        <p class="sinopsis">Margaret Tate es una poderosa editora que repentinamente se enfrenta a ser deportada a Canadá, su país de origen, tras habérsele acabado la visa y no haberla renovado pese a la insistencia de su abogado. Para evitarlo, la astuta ejecutiva declara que está comprometida con su asistente Andrew Paxton, al que lleva torturando durante años. Andrew acepta participar en la farsa pero con algunas condiciones. Cuando Margaret las acepta, se dirigen a Sitka, Alaska, para conocer a la peculiar familia de él. La ejecutiva de ciudad, acostumbrada a tener todo bajo control, se encuentra inmersa en situaciones surrealistas que escapan a cualquier lógica conocida. Con planes de boda en camino y el agente de inmigración tras sus pasos, Mr. Gilberston, Margaret y Andrew se comprometen a seguir con el plan previsto pese a las consecuencias, pero finalmente ¿se sentirán atraídos el uno por el otro o solo quieren llevar a cabo el plan para evitar que deporten a su jefa?</p>
+        <b class="sinopsis">Sinopsis</b>
+        <p class="sinopsis" class="sp">Margaret Tate es una poderosa editora que repentinamente se enfrenta a ser deportada a Canadá, su país de origen, tras habérsele acabado la visa y no haberla renovado pese a la insistencia de su abogado. Para evitarlo, la astuta ejecutiva declara que está comprometida con su asistente Andrew Paxton, al que lleva torturando durante años. Andrew acepta participar en la farsa pero con algunas condiciones. Cuando Margaret las acepta, se dirigen a Sitka, Alaska, para conocer a la peculiar familia de él. La ejecutiva de ciudad, acostumbrada a tener todo bajo control, se encuentra inmersa en situaciones surrealistas que escapan a cualquier lógica conocida. Con planes de boda en camino y el agente de inmigración tras sus pasos, Mr. Gilberston, Margaret y Andrew se comprometen a seguir con el plan previsto pese a las consecuencias, pero finalmente ¿se sentirán atraídos el uno por el otro o solo quieren llevar a cabo el plan para evitar que deporten a su jefa?</p>
       </div>
     </div>
 
-    <hr>
+    <hr id="p3">
 
-    <div class="film">
+    <div id="p4" class="film">
       <header>
         <h2>El Nivel del Pánico</h2>
       </header>
@@ -110,11 +110,12 @@
           <li famoso="secundario">Philip Akin</li>
         </ul>
 
-        <b>Sinopsis</b>
-        <p class="sinopsis">Es Nochebuena, Angela Bridges, una joven y ambiciosa ejecutiva, se queda a trabajar hasta tarde antes de ir con su familia. Cuando decide marcharse, baja hasta el estacionamiento pero no consigue arrancar el coche: se ha quedado sin batería y las puertas del garaje están cerradas. Las luces se apagan, su teléfono no tiene señal y no puede avisar a nadie. En ese momento aparece Thomas, un vigilante de seguridad que le ofrece su ayuda. Tras intentar arrancar el coche sin éxito, Thomas la invita a compartir con él la pequeña cena que ha preparado, pero ella se lo toma a broma. Ella lo rechaza e intenta salir para tomar un taxi pero antes de llegar al exterior, alguien la asalta por sorpresa y la duerme con cloroformo. Lo que no sabía era que Thomas la había estado espiando durante meses y la invitación a cenar no era opcional. Cuando despierta, se encuentra encadenada a una mesa y vestida para una terrorífica cena de Nochebuena.</p>
+        <b class="sinopsis">Sinopsis</b>
+        <p class="sinopsis" class="sp">Es Nochebuena, Angela Bridges, una joven y ambiciosa ejecutiva, se queda a trabajar hasta tarde antes de ir con su familia. Cuando decide marcharse, baja hasta el estacionamiento pero no consigue arrancar el coche: se ha quedado sin batería y las puertas del garaje están cerradas. Las luces se apagan, su teléfono no tiene señal y no puede avisar a nadie. En ese momento aparece Thomas, un vigilante de seguridad que le ofrece su ayuda. Tras intentar arrancar el coche sin éxito, Thomas la invita a compartir con él la pequeña cena que ha preparado, pero ella se lo toma a broma. Ella lo rechaza e intenta salir para tomar un taxi pero antes de llegar al exterior, alguien la asalta por sorpresa y la duerme con cloroformo. Lo que no sabía era que Thomas la había estado espiando durante meses y la invitación a cenar no era opcional. Cuando despierta, se encuentra encadenada a una mesa y vestida para una terrorífica cena de Nochebuena.</p>
       </div>
     </div>
-    <hr>
+    <hr id="p5" {
+  }>
   </section>
 </body>
 </html>
