--- a/recetas.html
+++ b/recetas.html
@@ -61,7 +61,7 @@
     </div>
     <hr>
     <div id="recetas">
-      <div>
+      <div id="r1">
         <img class="receta" src="img/lasagna.jpg" alt="lasagna" /> 
 
         <b>Lasagna de carne</b>
@@ -71,7 +71,7 @@
       </div>
       <hr class="sepreceta">
 
-        <div>
+        <div id="r2">
         <img class="receta" src="img/ensalada.jpg" alt="ensalada" /> 
 
         <b>Ensalada césar con pollo</b>
@@ -81,7 +81,7 @@
       </div>
       <hr class="sepreceta">
 
-      <div>
+      <div id="r3">
         <img class="receta" src="img/risotto.jpg" alt="risotto" /> 
 
         <b>Risotto de champiñones y pollo</b>
